# LuggageMaker

./: CMakeLists.txt  README.md
assets/: airlines.json  items.json  tips.json
include/luggagemaker/api/: weather_client.hpp
include/luggagemaker/core/: airline_repository.hpp  item.hpp  item_repository.hpp  luggage_packer.hpp  tip_maker.hpp  tips_repository.hpp
include/luggagemaker/ui/: ui.hpp
src/: main.cpp
src/api/: weather_client.cpp
src/core/: airline_repository.cpp  item_repository.cpp  luggage_packer.cpp  tips_repository.cpp
src/ui/: ui.cpp
